修复api
