# jarvis/core/request_api.py
@@ -5,7 +5,7 @@ headers = {'User-Agent':'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_4) AppleWe
 # url="http://101.132.188.137:8079/test?q=1"
 # url="http://101.132.188.137:8079/tools/bing/load_pagev2"
 # url="http://192.168.1.102:8079/tools/bing/load_pagev2"
-url="http://43.159.144.130:8079/tools/bing/load_pagev2"
+url="http://43.159.144.130:8079/tools/image_caption"
 # param = {
 #   # 'url': 'https://blog.csdn.net/sjxgghg/article/details/134312033',
 #   # 'query': '如何解决这个bug?',
@@ -18,13 +18,12 @@ url="http://43.159.144.130:8079/tools/bing/load_pagev2"
 #   'query': '2015',
 #   'url':'https://en.wikipedia.org/wiki/OpenAI'
 # }
-params = {
-    "url": "https://en.wikipedia.org/wiki/Mercedes_Sosa",
-    "query": "Mercedes Sosa studio albums between 2000 and 2009"
-}
-res = requests.get(url,
+
+files = {'image_file': open("birds.jpg", "rb")}
+
+res = requests.post(url,
                    headers=headers,
-                   json=params,
+                   files=files,
                      timeout=30)
 
 print(res.json())
